--- a/ChatKeyboardDemo/ChatKeyboardDemo/Base.lproj/LaunchScreen.storyboard
+++ b/ChatKeyboardDemo/ChatKeyboardDemo/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +16,20 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="keyboard_launchImage" translatesAutoresizingMaskIntoConstraints="NO" id="qsK-Gb-7Jt">
+                                <rect key="frame" x="180" y="199" width="240" height="202"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="h8c-9r-u9X"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="qsK-Gb-7Jt" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="179" id="C65-mf-nsx"/>
+                            <constraint firstItem="qsK-Gb-7Jt" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="wII-De-RK4"/>
+                            <constraint firstItem="qsK-Gb-7Jt" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="xoy-tL-8S6"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +37,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="keyboard_launchImage" width="512" height="512"/>
+    </resources>
 </document>
